# AppleContactsParse

./: .gitignore  AppleContactsParse  AppleContactsParse.cabal  LICENSE  Makefile  README.md  backupAddressBook.scpt  em1  gronk  install  jq-queries  mkVcf  notPaid.py  r  rall  rnp  rsi  stack.yaml
access/: Graduates.py  notPaid.py  rnp  rsi  studentInfo.py
docs/: VctGrammar.txt
src/: Args.hs  Date.hs  Debog.hs  Files.hs  Main.hs  Out.hs  Parse.hs  RE.hs  Test.hs
test/: Adhrit.vcf  Arubala.test  Dup.vcf  Little.vcf  Many.vcf  Ruthvik.vcf  Several.vcf  Several2.vcf  Simplicial.vcf  TwoThou.vcf  little  one.vcf  ruthvik  t1  t2  t3  t4  t5  t6  t7  t8  t9  tAdhrit  tDup
tst/unit/: CardSpec.hs
