name:                AppleContactsParse
version:             0.1.0.0
-- synopsis:
-- description:
homepage:            https://github.com/MidnightSkulker/AppleContactsParse#readme
license:             BSD3
license-file:        LICENSE
author:              Peter White
maintainer:          desourdesourde@gmail.com
copyright:           (C) Peter White
category:            Web
build-type:          Simple
cabal-version:       >=1.10
extra-source-files:  README.md
                     
executable AppleContactsParse
  hs-source-dirs:      src
  main-is:             Main.hs
  other-modules:       Parse, Test
  default-language:    Haskell2010
  build-depends:       base >= 4.7 && < 5,
                       parsec,
                       bytestring,
                       aeson,
                       text

test-suite unit-tests
  type:                exitcode-stdio-1.0
  main-is:             CardSpec.hs
  hs-source-dirs:      tst
  build-depends:       base,
                       hspec,
                       hspec-discover
