name:                AppleContactsParse
version:             0.1.0.0
synopsis:            Convert Apple Contacts to JSON file
-- description:
homepage:            https://github.com/MidnightSkulker/AppleContactsParse#readme
license:             BSD3
license-file:        LICENSE
author:              Peter White
maintainer:          desourdesourde@gmail.com
copyright:           (C) Peter White
category:            Web
build-type:          Simple
cabal-version:       >=1.10
extra-source-files:  README.md
allow-newer:         true
                     
executable AppleContactsParse
  hs-source-dirs:      src
  main-is:             Main.hs
  ghc-options:         -Wall
  other-modules:       Parse, Test, Args, Files, Out, RE
  default-language:    Haskell2010
  build-depends:       base >= 4.7 && < 5,
                       parsec,
                       bytestring,
                       optparse-applicative,
                       parseargs,
                       aeson,
                       network-uri,
                       text,
                       regex,
                       regex-compat,
                       MissingH

test-suite unit-tests
  type:                exitcode-stdio-1.0
  main-is:             Spec.hs
  ghc-options:         -Wall
  other-modules:       CardSpec, Parse, Test, RE, Args, Out, Files
  hs-source-dirs:      tst/unit, src
  build-depends:       base >= 4.7 && < 5,
                       hspec,
                       hspec-discover,
                       parsec,
                       bytestring,
                       optparse-applicative,
                       aeson,
                       network-uri,
                       text,
                       regex,
                       regex-compat,
                       MissingH
